test/files/pos/t7232b/Test.scala
// scalac: -Werror
object Test {
  import pack._

  Foo.list().packList()
}
