test/files/neg/t12799/Test_2.scala

// scalac: -Werror -Xlint
// javaVersion: 9+

import example._

object Test extends App {
  println(C.answer())
}
